[package]
name = "screenshots"
version = "0.5.4"
edition = "2021"
description = "A cross-platform screen capturer library"
license = "Apache-2.0"
documentation = "https://docs.rs/screenshots"
homepage = "https://github.com/nashaofu/screenshots-rs"
repository = "https://github.com/nashaofu/screenshots-rs.git"
keywords = ["screenshots", "screenshot", "screen", "capture"]

[[bin]]
name = "demo"
path = "src/bin/main.rs"

[dependencies]
png = "0.17.8"
display-info = "0.4.1"
anyhow = "1.0.70"

[target.'cfg(target_os="macos")'.dependencies]
core-graphics = "0.22.3"

[target.'cfg(target_os="windows")'.dependencies]
fxhash = "0.2.1"
widestring = "1.0.2"

[target.'cfg(target_os="linux")'.dependencies]
dbus = { version = "0.9.7", features = ["vendored"] }
xcb = "1.2.0"

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.38.0"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging_D2D",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_Console",
    "UI",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Win32_Security",
    "Storage",
    "Storage_Streams",
]
